fix jumping footer

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -147,11 +147,11 @@ footer #archive ul {
   overflow-x: scroll;
   box-sizing: content-box;
   list-style: none;
+  white-space: nowrap;
   // display: flex; // flex not needed on mobile for slider
   // flex-direction: row;
   // justify-content: center;
-  white-space: nowrap;
-  padding: 0 0.25em;
+  // padding: 0 0.25em;
 }
 footer #archive ul li { margin-right: 0.25em; }
 footer #archive ul li>img { height: 95px; } // thumbnails
@@ -235,7 +235,6 @@ body#about {
     position:fixed;
     bottom: 0px;
     left: 0px;
-    height: 60px;
   } 
 } 
 
@@ -314,7 +313,6 @@ body#follow {
     position:fixed;
     bottom: 0px;
     left: 0px;
-    height: 60px;
   } 
 } 
 
